# viewfmx-device

./: .gitignore  CMakeLists.txt  README.md  lv_conf.h  main.c
data/: data_provider.h  http_provider.c  http_provider.h  http_provider_esp.c  http_provider_parse.c  http_provider_parse.h  mock_provider.c  mock_provider.h
esp32/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
esp32/components/espressif__esp_cam_sensor/: CMakeLists.txt  Kconfig
esp32/main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  idf_component.yml
gui/: gui.c  gui.h
gui/assets/: logo.c
gui/screens/: room_screen.c  room_screen.h  settings_overlay.c  settings_overlay.h
platform/: sysinfo.h
platform/esp32/: README.md  compat.c  display.c  display.h  fetcher.c  fetcher.h  input.c  input.h  motion.c  motion.h  net.c  net.h  sysinfo.c
platform/sdl/: display.c  display.h  input.c  input.h  net.c  net.h  sysinfo.c
